--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -81,7 +81,8 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
-+ActionMappings=(ActionName="Новое назначение действия_0",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=None)
++ActionMappings=(ActionName="Sprint",bShift=True,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
++ActionMappings=(ActionName="Sprint",bShift=True,bCtrl=False,bAlt=False,bCmd=False,Key=RightShift)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Up)
@@ -92,8 +93,6 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=Left)
 +AxisMappings=(AxisName="Zoom",Scale=1.000000,Key=MouseWheelAxis)
 +AxisMappings=(AxisName="Zoom",Scale=-1.000000,Key=MouseWheelAxis)
-+AxisMappings=(AxisName="Sprint",Scale=1.000000,Key=LeftShift)
-+AxisMappings=(AxisName="Sprint",Scale=1.000000,Key=RightShift)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
